# goon-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  build.rs  settings.example.toml  settings.example.yaml  tarpaulin.toml  test_prompt.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: sdk_benchmark.rs
bindings/: AudioOptions.ts  HypnoOptions.ts  ImageOptions.ts  PromptOptions.ts  VideoOptions.ts  WallpaperOptions.ts  WebsiteOptions.ts  WindowOptions.ts
examples/: gen_sdk.rs
issues/: 1.Architecture_Documentation_Overall_System_Design.md  10.Media_Image_Rendering_Implementation.md  11.Media_Video_Rendering_with_libmpv2.md  12.Media_Audio_Playback_Implementation.md  13.Media_PromptText_Window_Rendering.md  14.Media_Wallpaper_Setting_Implementation.md  15.Media_WebsiteURL_Opening_Implementation.md  16.Core_Main_Application_Loop_Implementation.md  17.Testing_Integration_and_End-to-End_Tests.md  18.Documentation_User_Guide_and_Developer_Docs.md  19.GUI_Slint_Migration_and_Focus_Issue.md  2.Core_Application_Initialization_and_Configuration_Loading.md  20.Feature_System_Tray_Icon_and_Web_UI_Replacement.md  3.Core_Pack_Asset_Loading_and_Management.md  4.LLM_Integration_with_Ollama_via_ollama-rs.md  5.TypeScript_SWC_Compilation_Pipeline.md  6.JavaScript_deno_core_Runtime_Setup_and_Execution.md  7.Bindings_Rust_SDK_Generation_and_Type_Definitions.md  8.Permissions_Permission_System_Implementation.md  9.GUI_Window_Manager_with_winit_and_wgpu.md
packs/TestPack/: config.yaml
prompt_demo/: Cargo.toml  build.rs  gallery.slint
prompt_demo/src/: main.rs
prompt_demo/ui/pages/: controls_page.slint  easings_page.slint  list_view_page.slint  page.slint  table_view_page.slint
src/: lib.rs  main.rs
src/app_loop/: mod.rs  orchestrator.rs  state.rs
src/assets/: loader.rs  mod.rs  registry.rs  selector.rs  types.rs
src/config/: mod.rs  pack.rs  settings.rs
src/core/: app.rs
src/gui/: content.rs  event_loop.rs  mod.rs  renderer.rs  slint_controller.rs  tests.rs  tray.rs  window.rs  window_manager.rs  windows.rs
src/gui/windows/: image.rs  spawner.rs  types.rs  video.rs  write_lines.rs
src/llm/: client.rs  conversation.rs  mod.rs  prompt.rs
src/media/: mod.rs
src/media/audio/: manager.rs  player.rs
src/media/image/: animation.rs  image.slint  loader.rs  mod.rs  renderer.rs  shader.wgsl
src/media/prompt/: prompt.slint  renderer.rs
src/media/video/: audio.rs  content.rs  downloader.rs  ipc.rs  manager.rs  mod.rs  player.rs  renderer.rs  video.slint
src/media/wallpaper/: linux.rs  macos.rs  mod.rs  windows.rs
src/media/write_lines/: renderer.rs  write_lines.slint
src/permissions/: checker.rs  mod.rs  resolver.rs  types.rs
src/runtime/: error.rs  executor.rs  mod.rs  runtime.rs  utils.rs
src/sdk/: analysis.rs  audio.rs  generator.rs  hypno.rs  image.rs  metadata.rs  mod.rs  pack.rs  prompt.rs  prompt_simple.rs  runtime_gen.rs  system.rs  templates.rs  types.rs  video.rs  wallpaper.rs  website.rs  write_lines.rs
src/sdk/js/: audio.ts  hypno.ts  image.ts  init.ts  pack.ts  prompt.ts  system.ts  video.ts  wallpaper.ts  website.ts
src/server/: app.rs  routes.rs
src/typescript/: compiler.rs  error.rs  mod.rs  sdk_generator.rs
src/ui/: config_window.slint  main.slint
tests/: assets_integration_test.rs  full_stack_integration_test.rs  llm_integration_test.rs  permissions_integration_test.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
